<resources>
    <string name="app_name">Challenge - 2.3 - Shopping List</string>

    <string name="add_item">add item</string>
    <string name="keju">Keju</string>
    <string name="nasi">Nasi</string>
    <string name="apel">Apel</string>
    <string name="roti">Roti</string>
    <string name="susu">Susu</string>
    <string name="telur">Telur</string>
    <string name="ayam">Ayam</string>
    <string name="ikan">Ikan</string>
    <string name="search_store_location">Search Location</string>
    <string name="search_text">Search</string>
</resources>